--- a/templates/about.html
+++ b/templates/about.html
@@ -61,16 +61,29 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Technical Skills </h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                    <ul>
+                      <li>Programming/Scripting:  Python, C, MATLAB/Simulink </li>
+                      <li>Software & Tools:  NI TestStand, Corvus, JIRA, CANalyzer, ECU Diagnostics Tool, NI-Xnet, Multisim, Proteus </li>
+                      <li>Framework/Libraries: Numpy, Pandas, Streamlit </li>
+                    </ul>
+                  </p>
+                  <h3>Certifications</h3>
+                  <p>
+                    <ul>
+                      <li>CourseEra - Introduction to Data Science in Python by University of Michigan </li>
+                      <li>CourseEra- Machine Learning by Stanford University  </li>
+                      <li>Udemy - Web Scraping in Python: Master the Fundamentals </li>
+                    </ul>
+                  <h3>Languages:</h3>
+                  </p>
+                    <ul>
+                      <li>English </li>
+                      <li>Hindi  </li>
+                      <li>Marathi</li>
+                    </ul>
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/IMG_0106.jpg" class="img-responsive" alt="">
