--- a/templates/about.html
+++ b/templates/about.html
@@ -64,14 +64,17 @@
                   <h3>Technical Skills </h3>
                   <p>
                     <ul>
-                      <li>Programming/Scripting:  Python, C, MATLAB/Simulink </li>
-                      <li>Software & Tools:  NI TestStand, Corvus, JIRA, CANalyzer, ECU Diagnostics Tool, NI-Xnet, Multisim, Proteus </li>
+                      <li>Programming/Scripting:  Python, C, MATLAB </li>
+                      <li>Software & Tools:  NI TestStand, CANalyzer, JIRA, Service Now, Apache Ambari, Control-M </li>
                       <li>Framework/Libraries: Numpy, Pandas, Streamlit </li>
+					  <li>Operating system:Linux, Windows</li>
                     </ul>
                   </p>
                   <h3>Certifications</h3>
                   <p>
                     <ul>
+					  <li>CourseEra- Neural Networks and Deep Learning</li>	
+					  <li>CourseEra- Improving Deep Neural Networks, Hyperparameter tuning, Regularization and Optimization</li>	
                       <li>CourseEra - Introduction to Data Science in Python by University of Michigan </li>
                       <li>CourseEra- Machine Learning by Stanford University  </li>
                       <li>Udemy - Web Scraping in Python: Master the Fundamentals </li>
